@@ -81,22 +81,25 @@ if ($outputtype eq 'tkcanvas') {
     tkcanvas_output($rule, $graphviz, $prefix, $gm_args);
 } else {
     die "-o is missing" if !defined $outputfile;
-    my $meth = "as_" . $outputtype;
-    $graphviz->$meth($outputfile);
+    $graphviz->run(format => $outputtype, output_file => $outputfile);
 }
 
 sub generate_graphviz {
     my($file, $rule, $prefix, $gm_args) = @_;
     my $gm = GraphViz::Makefile->new(undef, $file, $prefix, %$gm_args);
-    my $g = GraphViz->new;
+    my $g = GraphViz2->new;
     my ($nodes, $edges) = $gm->generate_tree($rule);
-    $g->add_node(GraphViz::Makefile::graphviz_escape($_), %{ $nodes->{$_} }) for keys %$nodes;
-    for my $edge_start (keys %$edges) {
-        my $edge_start_esc = GraphViz::Makefile::graphviz_escape($edge_start);
+    $g->add_node(
+        name => GraphViz::Makefile::graphviz_protect_name($_),
+        label => GraphViz::Makefile::graphviz_escape($_),
+        %{ $nodes->{$_} },
+    ) for sort keys %$nodes;
+    for my $edge_start (sort keys %$edges) {
+        my $edge_start_esc = GraphViz::Makefile::graphviz_protect_name($edge_start);
         my $sub_edges = $edges->{$edge_start};
         $g->add_edge(
-            $edge_start_esc,
-            GraphViz::Makefile::graphviz_escape($_),
+            from => $edge_start_esc,
+            to => GraphViz::Makefile::graphviz_protect_name($_),
             %{ $sub_edges->{$_} },
         ) for keys %$sub_edges;
     }
@@ -169,7 +172,7 @@ sub draw_graph {
     if ($tkcanvastype eq 'tkgraphviz') {
         $c->show($graphviz);
     } else {
-        for my $m (GraphViz::Makefile::graphviz2tk($graphviz->as_plain)) {
+        for my $m (GraphViz::Makefile::graphviz2tk($graphviz->run(format=>"plain")->dot_output)) {
             my ($method, @args) = @$m;
             $c->$method(@args);
         }
@@ -276,7 +279,7 @@ C<Tk::GraphViz> first, then C<Tk::Canvas>.
 
 =head1 SEE ALSO
 
-L<dot(1)>, L<GraphViz>, L<GraphViz::Makefile>, L<Tk>, L<Tk::GraphViz>, L<Tk::Canvas>.
+L<dot(1)>, L<GraphViz2>, L<GraphViz::Makefile>, L<Tk>, L<Tk::GraphViz>, L<Tk::Canvas>.
 
 =cut
 
